--- a/app/franchise.html
+++ b/app/franchise.html
@@ -503,9 +503,36 @@
                 </div>
             </div>
             <div class="block_slider">
-                <div class="container">
-                    <h2>ФОРМАТЫ РЕСТОРАНОВ</h2>
+                <div class="wrapper_slider">
+                    <div class="container">
+                        <h2>ФОРМАТЫ РЕСТОРАНОВ</h2>
+                        <div class="slider">
+                            <div class="slide">
+                                <img src="img/franchise/slide_one.png" alt="slide_one" />
+                                <h3>На фудкорте в ТРЦ</h3>
+                                <p class="strong">Площадь 40-60 кв. метров
+                                    Инвестиции от 40 000 $
+                                    + Паушальный взнос</p>
+                                <p>Ресторан в зоне Food-Court в торговом центре:
+                                    это когда вы открываете только кухню без своей
+                                    посадки и работаете наряду с другими
+                                    заведениями в зале с общей посадкой от ТРЦ</p>
+                            </div>
+                            <div class="slide">
+                                <img src="img/franchise/slide_two.png" alt="slide_one" />
+                                <h3>Фасадный ресторан</h3>
+                                <p class="strong">Площадь 120-200 кв. метров
+                                    Инвестиции от 80 000 $
+                                    + Паушальный взнос</p>
+                                <p>Фасадный ресторан отличается от фудкорта
+                                    собственным залом со своей посадкой. Может
+                                    располагаться на 1 этаже в любом здании либо
+                                    быть на фасаде ТРЦ или супермаркета.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
             </div>
             <div class="seven_steps_to_discover">
                 <div class="container">
