--- a/app/index.html
+++ b/app/index.html
@@ -863,7 +863,29 @@
             </div>
         </transition>
     </div>
-
+    <div class="wrapper_popup" id="popup_wrapper">
+        <div class="popup_application">
+            <div class="close_popup"></div>
+            <div class="popup_top">
+                <h2>ВСТАНОВИ МОБІЛЬНИЙ
+                    ДОДАТОК ЮДЖИН БУРГЕР</h2>
+                <img class="phone-popup" src="img/popup_application/popup_phone.png" alt="phone" />
+                <img class="phone-popup_mob" src="img/mobi/popup_application/mob_img_popup.png" alt="phone" />
+            </div>
+            <div class="center_popup">
+                <h4>РОБИ ЗАМОВЛЕННЯ В ДЕКІЛЬКА КЛІКІВ,
+                    НАКОПИЧУЙ ТА ВИТРАЧАЙ БОНУСНІ БАЛИ</h4>
+            </div>
+            <div class="bottom_popup">
+                <a href="javascript: void(0)">
+                    <img src="img/popup_application/app_store.png" alt="app store" />
+                </a>
+                <a href="javascript: void(0)">
+                    <img src="img/popup_application/google_play.png" alt="google play" />
+                </a>
+            </div>
+        </div>
+    </div>
 
 
     <script src="js/jquery.min.js"></script>
@@ -875,6 +897,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/popup_application.js"></script>
     <script src="/js/slick.min.js"></script>
     <script type="text/javascript">
         let $page = $('html, body');
